# Haskell

./: all_week.csv  data-analysis.cabal  salaries.csv
app/: CSVParser.hs  Helper.hs  Main.hs
