cabal-version:      2.4
name:               data-analysis
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             somesh
maintainer:         someshkumarbhaskar@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable data-analysis
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        CSVParser,
        Helper

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.0.0,
        csv == 0.1.2,
        cassava==0.5.2.0,
        vector==0.12.3.1,
        bytestring==0.11.1.0,
        multiset==0.3.4.3,
        hs-gchart==0.4.2,
        easyplot >=1.0 && <1.1,
        
    hs-source-dirs:   app
    default-language: Haskell2010
